GNOME Bugzilla – Bug 669809
[PATCH] Fix a possible memory leak in _gedit_document_check_externally_modified()
Last modified: 2012-02-10 17:19:50 UTC
Created attachment 207261 [details] [review] Fix In _gedit_document_check_externally_modified(), `info` might not be unrefed.
Review of attachment 207261 [details] [review]: Good catch. Just a minor inline comment. ::: gedit/gedit-document.c @@ +1385,2 @@ g_file_info_get_modification_time (info, &timeval); + why the extra line?
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.