Fix a possible memory leak

It could be that the file info does not have the
G_FILE_ATTRIBUTE_TIME_MODIFIED attribute set, and
_gedit_document_check_externally_modified() would return before unrefing
`info`.

https://bugzilla.gnome.org/show_bug.cgi?id=669809